--- a/app/alembic.ini
+++ b/app/alembic.ini
@@ -1,3 +1,35 @@
 [alembic]
 script_location = alembic
-sqlalchemy.url = %(DATABASE_URL)s
+sqlalchemy.url = postgresql+psycopg2://postgres:postgres@db:5433/appdb
+
+[loggers]
+keys = root,sqlalchemy,alembic
+
+[handlers]
+keys = console
+
+[formatters]
+keys = sqlalchemy
+
+[logger_root]
+level = WARN
+handlers = console
+
+[logger_sqlalchemy]
+level = WARN
+handlers =
+qualname = sqlalchemy.engine
+
+[logger_alembic]
+level = INFO
+handlers =
+qualname = alembic
+
+[handler_console]
+class = StreamHandler
+args = (sys.stderr,)
+level = NOTSET
+formatter = sqlalchemy
+
+[formatter_sqlalchemy]
+format = %(levelname)-5.5s [%(name)s] %(message)s
